executable('foo', ['main.c', 'hum_lua.c', 'hum_ds.c', 'graphics.c', 'render.c',
           'app.c', 'foo.c', 'coroutines.c', 'rpn.c', 'lang_gen.c'],
           dependencies: [sdl3_dep, luajit_dep])

# executable('baz', ['baz.c', 'hum_lua.c', 'hum_ds.c', 'graphics.c', 'render.c',],
#            dependencies: [sdl3_dep, luajit_dep])
